--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
 		"tailwindcss": "^3.4.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
+		"vite": "^5.0.3",
+		"@sveltejs/adapter-vercel": "^5.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+	}
 }
