--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/typography": "^0.5.12",
+    "@types/pg": "^8.11.4",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.9.0",
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.20.14",
-    "pg": "^8.11.4",
+    "lucia": "^3.1.1",
+    "pg": "^8.11.5",
     "postcss": "^8.4.38",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
@@ -36,7 +38,9 @@
   },
   "type": "module",
   "dependencies": {
+    "@lucia-auth/adapter-drizzle": "^1.0.7",
     "drizzle-orm": "^0.30.6",
+    "oslo": "^1.2.0",
     "postgres": "^3.4.4"
   }
 }
