Add ORIGIN environment variable and update startup script

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
       - "3000:3000"
     environment:
       - DATABASE_URL=postgres://adventurelog:PO24VjITwGgk@db:5432/adventurelog
+      # ORIGIN is only necessary when not using a reverse proxy or hosting that includes https
+      - ORIGIN=http://localhost:3000
     depends_on:
       - db
   db:
