--- a/.github/workflows/tag-latest.yml
+++ b/.github/workflows/tag-latest.yml
@@ -8,6 +8,12 @@ jobs:
   update-latest-tag:
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+    - name: Set up Git user
+      run: |
+        git config user.name "${{ github.actor }}"
+        git config user.email "${{ github.actor }}@users.noreply.github.com"
     - name: Run latest-tag
       uses: EndBug/latest-tag@latest
       with:
