Add volume mapping for ./sql in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - ORIGIN=http://localhost:3000
     depends_on:
       - db
+    volumes:
+    - ./sql:/sql
   db:
     image: postgres
     environment:
