Update server setup logic and add admin user creation in setup page

--- a/compose-dev.yml
+++ b/compose-dev.yml
@@ -11,3 +11,5 @@ services:
       # Only necessary for externaly hosted databases such as NeonDB
     volumes:
     - ./sql:/sql
+
+# docker compose -f ./compose-dev.yml up --build
