--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "type": "module",
   "dependencies": {
     "@lucia-auth/adapter-drizzle": "^1.0.7",
+    "@vercel/analytics": "^1.2.2",
     "drizzle-orm": "^0.30.6",
     "oslo": "^1.2.0",
     "postgres": "^3.4.4"
