--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "drizzle-orm": "^0.30.6",
+    "iconify-icon": "^2.1.0",
     "oslo": "^1.2.0",
     "postgres": "^3.4.4"
   }
