Docker with minio

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
 DATABASE_URL=
+
+MINIO_URL=http://localhost:9000
+MINIO_ENDPOINT=localhost
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin
+MINIO_USE_SSL=false
