--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,17 @@ services:
       POSTGRES_DB: adventurelog
     ports:
       - "5432:5432"
+  minio:
+    image: quay.io/minio/minio
+    command: server /data --console-address ":9001"
+    environment:
+      - MINIO_ROOT_USER=minioadmin
+      - MINIO_ROOT_PASSWORD=minioadmin
+    volumes:
+      - minio_data:/data
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+
+volumes:
+  minio_data:
