--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
   },
   "type": "module",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.592.0",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "drizzle-orm": "^0.30.6",
     "iconify-icon": "^2.1.0",
-    "minio": "^8.0.0",
     "oslo": "^1.2.0",
     "postgres": "^3.4.4"
   }
