--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 DATABASE_URL=
 
-MINIO_SERVER_URL=http://localhost:9000
-MINIO_CLIENT_URL=http://localhost:9000
-MINIO_ENDPOINT=localhost
-MINIO_ACCESS_KEY=minioadmin
-MINIO_SECRET_KEY=minioadmin
-MINIO_USE_SSL=false
-BODY_SIZE_LIMIT=Infinity
+# *** COMPATIBLE PROVIDERS: aws, gcp, digitalocean, supabase, minio (local via docker) ***
+# Want another? - open an issue!
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_S3_ENDPOINT=
+AWS_REGION=
