--- a/backend/server/vercel.json
+++ b/backend/server/vercel.json
@@ -1,28 +1,15 @@
 {
-  "version": 2,
   "builds": [
     {
-      "src": "demo/wsgi.py",
+      "src": "djangoprojectname/wsgi.py",
       "use": "@vercel/python",
       "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-    },
-    {
-      "src": "build_files.sh",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "ui/staticfiles"
-      }
     }
   ],
   "routes": [
     {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
       "src": "/(.*)",
-      "dest": "demo/wsgi.py"
+      "dest": "djangoprojectname/wsgi.py"
     }
-  ],
-  "outputDirectory": "ui/staticfiles"
+  ]
 }
