--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     #image: ghcr.io/seanmorley15/adventurelog-frontend:latest
     environment:
       - PUBLIC_SERVER_URL=http://server:8000
-      - ORIGIN=http://10.0.0.92:8080
+      - ORIGIN=http://localhost:8080
       - BODY_SIZE_LIMIT=Infinity
     ports:
       - "8080:3000"
@@ -34,7 +34,7 @@ services:
       - DJANGO_ADMIN_USERNAME=admin
       - DJANGO_ADMIN_PASSWORD=admin
       - DJANGO_ADMIN_EMAIL=admin@example.com
-      - PUBLIC_URL='http://10.0.92:81'
+      - PUBLIC_URL='http://localhost:81'
       - CSRF_TRUSTED_ORIGINS=https://api.adventurelog.app,https://adventurelog.app
       - DEBUG=False
     ports:
