--- a/.github/workflows/frontend-latest.yml
+++ b/.github/workflows/frontend-latest.yml
@@ -1,4 +1,4 @@
-name: Upload latest frontend image to GHCR
+name: Upload latest frontend image to GHCR and Docker Hub
 
 on:
   push:
@@ -24,11 +24,23 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.ACCESS_TOKEN }}
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build Docker image
         run: docker build -t $IMAGE_NAME:latest ./frontend
 
-      - name: Tag Docker image
+      - name: Tag Docker image for GHCR
         run: docker tag $IMAGE_NAME:latest ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:latest
+
+      - name: Tag Docker image for Docker Hub
+        run: docker tag $IMAGE_NAME:latest ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:latest
 
       - name: Push Docker image to GHCR
         run: docker push ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:latest
+
+      - name: Push Docker image to Docker Hub
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:latest
