--- a/docker-compose-traefik.yaml
+++ b/docker-compose-traefik.yaml
@@ -1,15 +1,15 @@
-version: '3.9'
+version: "3.9"
 
 services:
   traefik:
     image: traefik:v2.11
     command:
-      - "--api.insecure=true"  # Enable Traefik dashboard (remove in production)
+      - "--api.insecure=true" # Enable Traefik dashboard (remove in production)
       - "--providers.docker=true"
       - "--entrypoints.web.address=:80"
       - "--entrypoints.websecure.address=:443"
       - "--certificatesresolvers.letsencrypt.acme.httpchallenge.entrypoint=web"
-      - "--certificatesresolvers.letsencrypt.acme.email=your-email@example.com"  # Replace with your email
+      - "--certificatesresolvers.letsencrypt.acme.email=your-email@example.com" # Replace with your email
       - "--certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json"
     ports:
       - "80:80"
@@ -26,12 +26,12 @@ services:
     environment:
       POSTGRES_DB: database
       POSTGRES_USER: adventure
-      POSTGRES_PASSWORD: your_postgres_password  # Replace with the actual password
+      POSTGRES_PASSWORD: your_postgres_password # Replace with the actual password
     volumes:
       - postgres-data:/var/lib/postgresql/data/
 
   web:
-    image: ghcr.io/seanmorley15/adventurelog-web:latest
+    image: ghcr.io/seanmorley15/adventurelog-frontend:latest
     restart: unless-stopped
     environment:
       PUBLIC_SERVER_URL: "http://server:8000"
@@ -39,7 +39,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.adventurelog.entrypoints=websecure"
-      - "traefik.http.routers.adventurelog.rule=Host(`yourdomain.com`) && !PathPrefix(`/media`)"  # Replace with your domain
+      - "traefik.http.routers.adventurelog.rule=Host(`yourdomain.com`) && !PathPrefix(`/media`)" # Replace with your domain
       - "traefik.http.routers.adventurelog.tls=true"
       - "traefik.http.routers.adventurelog.tls.certresolver=letsencrypt"
 
@@ -49,7 +49,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.nginx.entrypoints=websecure"
-      - "traefik.http.routers.nginx.rule=Host(`yourdomain.com`) && PathPrefix(`/media`)"  # Replace with your domain
+      - "traefik.http.routers.nginx.rule=Host(`yourdomain.com`) && PathPrefix(`/media`)" # Replace with your domain
       - "traefik.http.routers.nginx.tls=true"
       - "traefik.http.routers.nginx.tls.certresolver=letsencrypt"
       - "traefik.http.middlewares.nginx-stripprefix.stripprefix.prefixes=/media"
@@ -64,15 +64,15 @@ services:
       PGHOST: "db"
       PGDATABASE: "database"
       PGUSER: "adventure"
-      PGPASSWORD: your_postgres_password  # Replace with the actual password
-      SECRET_KEY: your_secret_key  # Replace with the actual secret key
+      PGPASSWORD: your_postgres_password # Replace with the actual password
+      SECRET_KEY: your_secret_key # Replace with the actual secret key
       DJANGO_ADMIN_USERNAME: "admin"
-      DJANGO_ADMIN_PASSWORD: your_admin_password  # Replace with the actual admin password
-      DJANGO_ADMIN_EMAIL: "adventurelog-admin@yourdomain.com"  # Replace with your email
-      PUBLIC_URL: "https://yourdomain.com"  # Replace with your domain
-      CSRF_TRUSTED_ORIGINS: "https://yourdomain.com"  # Replace with your domain
+      DJANGO_ADMIN_PASSWORD: your_admin_password # Replace with the actual admin password
+      DJANGO_ADMIN_EMAIL: "adventurelog-admin@yourdomain.com" # Replace with your email
+      PUBLIC_URL: "https://yourdomain.com" # Replace with your domain
+      CSRF_TRUSTED_ORIGINS: "https://yourdomain.com" # Replace with your domain
       DEBUG: "false"
-      FRONTEND_URL: "https://yourdomain.com"  # Replace with your domain
+      FRONTEND_URL: "https://yourdomain.com" # Replace with your domain
     volumes:
       - adventurelog-media:/code/media
 
