Add CZ and CRON for worldtravel seed

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,7 +13,7 @@ WORKDIR /code
 
 # Install system dependencies
 RUN apt-get update \
-    && apt-get install -y git postgresql-client \
+    && apt-get install -y git postgresql-client cron \
     && apt-get clean
 
 # Install Python dependencies
@@ -24,7 +24,20 @@ RUN pip install -r requirements.txt
 # Copy the Django project code into the Docker image
 COPY ./server /code/
 
-RUN python3 manage.py collectstatic --verbosity 2
+# Collect static files
+RUN python3 manage.py collectstatic --noinput --verbosity 2
+
+# Setup cron to run python3 manage.py worldtravel-seed every day at 00:00
+RUN echo "0 0 * * * python3 /code/manage.py worldtravel-seed --force >> /var/log/cron.log 2>&1" > /etc/cron.d/worldtravel-seed
+
+# Give execution rights on the cron job
+RUN chmod 0644 /etc/cron.d/worldtravel-seed
+
+# Apply cron job
+RUN crontab /etc/cron.d/worldtravel-seed
+
+# Ensure cron is started in the foreground when the container starts
+CMD ["cron", "-f"]
 
 # Set the entrypoint script
 COPY ./entrypoint.sh /code/entrypoint.sh
