--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
-version: "3.9"
-
 services:
   web:
     #build: ./frontend/
     image: ghcr.io/seanmorley15/adventurelog-frontend:latest
     container_name: adventurelog-frontend
+    restart: unless-stopped
     environment:
       - PUBLIC_SERVER_URL=http://server:8000 # MOST DOCKER USERS WILL NEVER NEED TO CHANGE THIS, EVEN IF YOU CHANGE THE PORTS
       - ORIGIN=http://localhost:8080
@@ -17,6 +16,7 @@ services:
   db:
     image: postgis/postgis:15-3.3
     container_name: adventurelog-db
+    restart: unless-stopped
     environment:
       POSTGRES_DB: database
       POSTGRES_USER: adventure
@@ -28,19 +28,21 @@ services:
     #build: ./backend/
     image: ghcr.io/seanmorley15/adventurelog-backend:latest
     container_name: adventurelog-backend
+    restart: unless-stopped
     environment:
       - PGHOST=db
       - PGDATABASE=database
       - PGUSER=adventure
-      - PGPASSWORD=changeme123
+      - PGPASSWORD=changeme123 # This should be the same as the POSTGRES_PASSWORD in the db service
       - SECRET_KEY=changeme123
       - DJANGO_ADMIN_USERNAME=admin
       - DJANGO_ADMIN_PASSWORD=admin
       - DJANGO_ADMIN_EMAIL=admin@example.com
-      - PUBLIC_URL='http://localhost:81'
-      - CSRF_TRUSTED_ORIGINS=https://api.adventurelog.app,https://adventurelog.app
+      - PUBLIC_URL='http://localhost:81' # NOTE: THIS IS THE PUBLIC URL TO THE **NGINX** SERVER USED FOR MEDIA FILES!
+      - CSRF_TRUSTED_ORIGINS=https://api.adventurelog.app,https://adventurelog.app # This is a comma separated list of trusted origins for CSRF, this should include where your frontend is hosted.
       - DEBUG=False
-      - FRONTEND_URL='http://localhost:8080'
+      - FRONTEND_URL='http://localhost:8080' # This is the URL of the frontend server
+      #- DISABLE_REGISTRATION=True
     ports:
       - "8000:8000"
     depends_on:
@@ -51,6 +53,7 @@ services:
   nginx:
     image: nginx:latest
     container_name: adventurelog-nginx
+    restart: unless-stopped
     ports:
       - "81:80"
     volumes:
