Refactor release workflow to use "released" event type

--- a/.github/workflows/backend-release.yml
+++ b/.github/workflows/backend-release.yml
@@ -2,7 +2,7 @@ name: Upload the tagged release backend image to GHCR and Docker Hub
 
 on:
   release:
-    types: [published]
+    types: [released]
 
 env:
   IMAGE_NAME: "adventurelog-backend"
