--- a/.github/workflows/frontend-release.yml
+++ b/.github/workflows/frontend-release.yml
@@ -2,7 +2,7 @@ name: Upload tagged release frontend image to GHCR and Docker Hub
 
 on:
   release:
-    types: [published]
+    types: [released]
 
 env:
   IMAGE_NAME: "adventurelog-frontend"
