Refactor frontend configuration and add optional Umami Analytics integration

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,7 @@
 PUBLIC_SERVER_URL=http://127.0.0.1:8000
 BODY_SIZE_LIMIT=Infinity
+
+
+# OPTIONAL VARIABLES FOR UMAMI ANALYTICS
+PUBLIC_UMAMI_SRC=
+PUBLIC_UMAMI_WEBSITE_ID=
