--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@lukulent/svelte-umami": "^0.0.3",
 		"svelte-i18n": "^4.0.1",
 		"svelte-maplibre": "^0.9.8"
 	}
