--- a/backend/server/requirements.txt
+++ b/backend/server/requirements.txt
@@ -14,3 +14,6 @@ django-resized
 django-geojson
 setuptools
 gunicorn==23.0.0
+slippers==0.6.2
+django-allauth-ui==1.5.1
+django-widget-tweaks==1.5.0
