Increase client_max_body_size to 100M in nginx configuration

--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -10,6 +10,8 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
+    client_max_body_size 100M;
+
     upstream django {
         server server:8000;  # Use the internal Docker networking
     }
