Add multi-factor authentication (MFA) support; update localization and error handling

--- a/backend/server/requirements.txt
+++ b/backend/server/requirements.txt
@@ -12,6 +12,7 @@ django-resized
 django-geojson
 setuptools
 gunicorn==23.0.0
+qrcode==8.0
 # slippers==0.6.2
 # django-allauth-ui==1.5.1
 # django-widget-tweaks==1.5.0
