--- a/backend/server/.env.example
+++ b/backend/server/.env.example
@@ -21,3 +21,14 @@ EMAIL_BACKEND='console'
 # EMAIL_HOST_USER='user'
 # EMAIL_HOST_PASSWORD='password'
 # DEFAULT_FROM_EMAIL='user@example.com'
+
+
+# ------------------- #
+# For Developers to start a Demo Database
+# docker run --name postgres-admin -e POSTGRES_USER=admin -e POSTGRES_PASSWORD=admin -e POSTGRES_DB=admin -p 5432:5432 -d postgis/postgis:15-3.3
+
+# PGHOST='localhost'
+# PGDATABASE='admin'
+# PGUSER='admin'
+# PGPASSWORD='admin'
+# ------------------- #
