--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,9 +41,11 @@
 	"dependencies": {
 		"@lukulent/svelte-umami": "^0.0.3",
 		"emoji-picker-element": "^1.26.0",
+		"gsap": "^3.12.7",
 		"marked": "^15.0.4",
 		"qrcode": "^1.5.4",
 		"svelte-i18n": "^4.0.1",
-		"svelte-maplibre": "^0.9.8"
+		"svelte-maplibre": "^0.9.8",
+		"tsparticles": "^3.7.1"
 	}
 }
