feat: add GPX file handling and GeoJSON integration in adventure page; update dependencies and AttachmentCard component

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
 	"type": "module",
 	"dependencies": {
 		"@lukulent/svelte-umami": "^0.0.3",
+		"@mapbox/togeojson": "^0.16.2",
 		"emoji-picker-element": "^1.26.0",
 		"gsap": "^3.12.7",
 		"marked": "^15.0.4",
