feat: Update user profile handling and enhance public user details response

--- a/backend/server/.env.example
+++ b/backend/server/.env.example
@@ -25,10 +25,10 @@ EMAIL_BACKEND='console'
 
 # ------------------- #
 # For Developers to start a Demo Database
-# docker run --name postgres-admin -e POSTGRES_USER=admin -e POSTGRES_PASSWORD=admin -e POSTGRES_DB=admin -p 5432:5432 -d postgis/postgis:15-3.3
+# docker run --name adventurelog-development -e POSTGRES_USER=admin -e POSTGRES_PASSWORD=admin -e POSTGRES_DB=adventurelog -p 5432:5432 -d postgis/postgis:15-3.3
 
 # PGHOST='localhost'
-# PGDATABASE='admin'
+# PGDATABASE='adventurelog'
 # PGUSER='admin'
 # PGPASSWORD='admin'
 # ------------------- #
