--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,6 +1,7 @@
 PUBLIC_SERVER_URL=http://127.0.0.1:8000
 BODY_SIZE_LIMIT=Infinity
 
+VITE_IMMICH_UPLOAD_URLS_ONLY=false
 
 # OPTIONAL VARIABLES FOR UMAMI ANALYTICS
 PUBLIC_UMAMI_SRC=
