--- a/backend/server/.env.example
+++ b/backend/server/.env.example
@@ -13,6 +13,8 @@ FRONTEND_URL='http://localhost:3000'
 
 EMAIL_BACKEND='console'
 
+COUNTRY_TRANSLATIONS=True
+
 # EMAIL_BACKEND='email'
 # EMAIL_HOST='smtp.gmail.com'
 # EMAIL_USE_TLS=False
